--- a/web1/nginx.conf
+++ b/web1/nginx.conf
@@ -1,8 +1,20 @@
 server {
     listen 80;
-    server_name web1;
+    server_name _;
+
+    root /app/dist;
+    index index.html;
 
     location / {
-        proxy_pass http://localhost:3000;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location /api/ {
+        proxy_pass http://127.0.0.1:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 }
