--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.3.0",
+    "bcryptjs": "^2.4.3",
     "pg": "^8.11.3",
     "redis": "^4.6.7"
   },
