--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,10 @@ services:
   web1:
     build: ./web1
     container_name: web1
+    env_file:
+      - ./backend/.env
     ports:
-      - "8081:3000"
+      - "8081:80"
     depends_on:
       - redis
       - api
@@ -28,40 +30,66 @@ services:
     networks:
       rrnet:
         ipv4_address: 172.20.0.11
+    healthcheck:
+      test: ["CMD-SHELL", "node -e \"const http=require('http');http.get('http://localhost:3000/healthz',res=>{process.exit(res.statusCode===200?0:1)}).on('error',()=>process.exit(1))\""]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   web2:
     build: ./web2
     container_name: web2
+    env_file:
+      - ./backend/.env
     ports:
-      - "8082:3000"
+      - "8082:80"
     depends_on:
       - redis
       - api
     networks:
       rrnet:
         ipv4_address: 172.20.0.12
+    healthcheck:
+      test: ["CMD-SHELL", "node -e \"const http=require('http');http.get('http://localhost:3000/healthz',res=>{process.exit(res.statusCode===200?0:1)}).on('error',()=>process.exit(1))\""]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   web3:
     build: ./web3
     container_name: web3
+    env_file:
+      - ./backend/.env
     ports:
-      - "8083:3000"
+      - "8083:80"
     depends_on:
       - redis
       - api
     networks:
       rrnet:
         ipv4_address: 172.20.0.13
+    healthcheck:
+      test: ["CMD-SHELL", "node -e \"const http=require('http');http.get('http://localhost:3000/healthz',res=>{process.exit(res.statusCode===200?0:1)}).on('error',()=>process.exit(1))\""]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   api:
     build: ./backend
     container_name: api
+    env_file:
+      - ./backend/.env
     ports:
       - "8080:4000"
     depends_on:
       - db
 #    dns:
 #      - 172.20.0.10
+    healthcheck:
+      test: ["CMD-SHELL", "node -e \"const http=require('http');http.get('http://localhost:4000/healthz',res=>{process.exit(res.statusCode===200?0:1)}).on('error',()=>process.exit(1))\""]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       rrnet:
         ipv4_address: 172.20.0.20
@@ -74,6 +102,11 @@ services:
     networks:
       rrnet:
         ipv4_address: 172.20.0.30
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   db:
     build: ./db
@@ -90,6 +123,11 @@ services:
     networks:
       rrnet:
         ipv4_address: 172.20.0.40
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -u$MYSQL_USER -p$MYSQL_PASSWORD || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
 
 volumes:
   db_data:
