--- a/web1/nginx.conf
+++ b/web1/nginx.conf
@@ -5,12 +5,20 @@ server {
     root /app/dist;
     index index.html;
 
+    # Proxy everything to the local Node server so dynamic routes (login/profile)
+    # are handled by Express. Static assets are still served by Express or
+    # can be served from /dist if Express exposes them.
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://127.0.0.1:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     location /api/ {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://api:4000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
