--- a/web2/package.json
+++ b/web2/package.json
@@ -13,7 +13,8 @@
     "express-session": "^1.18.0",
     "connect-redis": "^7.1.0",
     "redis": "^4.6.7",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
