--- a/web3/package.json
+++ b/web3/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "redis": "^4.6.7"
+    "redis": "^4.6.7",
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
