Adiçãoo de página e melhorias gerais

--- a/dns/named.conf
+++ b/dns/named.conf
@@ -3,6 +3,14 @@ options {
     recursion no;
     allow-transfer { none; };
     dnssec-validation no;
+    
+    // Habilita Round Robin - rotaciona os IPs em cada consulta
+    rrset-order {
+        class IN type A name "www.meutrabalho.com.br" order cyclic;
+    };
+    
+    // Garante que apenas 1 registro seja retornado por vez
+    minimal-responses yes;
 };
 
 zone "meutrabalho.com.br" IN {
