--- a/web2/package.json
+++ b/web2/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "express": "^4.19.2",
@@ -17,6 +20,14 @@
     "dotenv": "^16.4.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "supertest": "^6.3.3",
     "typescript": "^5.6.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
